{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 42,
  "lineage": "4503f18a-836c-646e-e820-383faac9a1ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0121017ca9c60e509",
            "owner_id": "753646501470",
            "tags": {
              "Name": "multi-cloud-k8-demo"
            },
            "vpc_id": "vpc-0386dc7aee083d788"
          },
          "dependencies": [
            "aws_vpc.multi-cloud-k8-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0567d0c6d51a64c74",
            "owner_id": "753646501470",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0121017ca9c60e509",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0386dc7aee083d788"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.multi-cloud-k8-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084963931b5fc1b43",
            "route_table_id": "rtb-0567d0c6d51a64c74",
            "subnet_id": "subnet-045c70c0f2ece58bf"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.multi-cloud-k8-demo",
            "aws_vpc.multi-cloud-k8-demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022b3153e46c33d2e",
            "route_table_id": "rtb-0567d0c6d51a64c74",
            "subnet_id": "subnet-03e3c8173458110f7"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.multi-cloud-k8-demo",
            "aws_vpc.multi-cloud-k8-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-multi-cloud-k8-demo-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:753646501470:security-group/sg-004807eeb4640bd59",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004807eeb4640bd59",
            "ingress": [],
            "name": "terraform-multi-cloud-k8-demo-cluster",
            "name_prefix": null,
            "owner_id": "753646501470",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0386dc7aee083d788"
          },
          "dependencies": [
            "aws_vpc.multi-cloud-k8-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "203.40.193.159/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1177360928",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-004807eeb4640bd59",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.terraform-multi-cloud-k8-demo-cluster",
            "aws_vpc.multi-cloud-k8-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "multi-cloud-k8-demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:753646501470:subnet/subnet-045c70c0f2ece58bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-045c70c0f2ece58bf",
            "map_public_ip_on_launch": false,
            "owner_id": "753646501470",
            "tags": {
              "Name": "terraform-multi-cloud-k8-demo-node",
              "kubernetes.io/cluster/terraform-multi-cloud-k8-demo": "shared"
            },
            "vpc_id": "vpc-0386dc7aee083d788"
          },
          "dependencies": [
            "aws_vpc.multi-cloud-k8-demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:753646501470:subnet/subnet-03e3c8173458110f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03e3c8173458110f7",
            "map_public_ip_on_launch": false,
            "owner_id": "753646501470",
            "tags": {
              "Name": "terraform-multi-cloud-k8-demo-node",
              "kubernetes.io/cluster/terraform-multi-cloud-k8-demo": "shared"
            },
            "vpc_id": "vpc-0386dc7aee083d788"
          },
          "dependencies": [
            "aws_vpc.multi-cloud-k8-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "multi-cloud-k8-demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:753646501470:vpc/vpc-0386dc7aee083d788",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0399b8c9f820a7938",
            "default_route_table_id": "rtb-07243e54de923e80e",
            "default_security_group_id": "sg-0b6129298669a684f",
            "dhcp_options_id": "dopt-ce05b3a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0386dc7aee083d788",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07243e54de923e80e",
            "owner_id": "753646501470",
            "tags": {
              "Name": "terraform-multi-cloud-k8-demo-node",
              "kubernetes.io/cluster/terraform-multi-cloud-k8-demo": "shared"
            }
          }
        }
      ]
    }
  ]
}